--- a/comers/templates/comers/index.html
+++ b/comers/templates/comers/index.html
@@ -27,7 +27,7 @@
                         <p class="set_filters">Установка фильтров</p>
                         <div class="button button--white ">
                             <img src="{% static '/comers/icons/icon_report.png' %}" alt="Скачать отчет">  
-                            <div>Скачать отчет</div>
+                            <div class="open-btn" data-popup="popup4" >Скачать отчет</div>
                         </div>
                 </div>
             <div class="filter_choises">
@@ -52,19 +52,17 @@
                 <div class="buttons_navigate_choice">
                     <button class="button button--red">Сбросить</button>
                     <button class="button button--green">Применить</button>
-                    <!-- Внесение данных popup1-->
-                    <button class="open-btn" data-popup="popup1">
+
+                    <!-- В кнопке два окна Popup-->
+                    <div class="open-btn" data-popup="popup1">
                         <div class="button button--dark-blue ">
                             <img src="{% static '/comers/icons/icon_add_data.png' %}" alt="Внести данные">  
                             <div>Внести данные</div>
                         </div>
-                    </button>
+                    </div>
                 </div>
-                
             </div>
-
             <div class="container">
-               
                 
                 <button class="open-btn" data-popup="popup2">
                     ℹ️ Информационное окно
@@ -91,37 +89,35 @@
                         <div class="add_data_user">
                             <div class="button button--white ">
                                 <img src="{% static '/comers/icons/icon_add_supplier.png' %}" alt="Внести данные">  
-                                <div>Добавить поставщика</div>
+                                <div class="open-btn" data-popup="popup2">Добавить поставщика</div>
                             </div>
                             <div class="button button--dark-blue ">
                                 <img src="{% static '/comers/icons/icon_add_data.png' %}" alt="Внести данные">  
-                                <div>Внести данные</div>
+                                <div class="open-btn" data-popup="popup3">Внести данные</div>
                             </div>
                         </div>
-                        
-
-
                     </div>
                 </div>
             </div>
             
-            <!-- Окно 2: информационное -->
+            <!-- Окно 2: Добавление поставщика -->
             <div id="popup2" class="my-popup">
                 <div class="popup-content">
                     <div class="popup-header">
                         <span class="drag-handle">☰</span>
-                        <h2>Информация</h2>
+                        <h2>Добавить поставщика</h2>
                         <span class="close-btn">&times;</span>
                     </div>
                     <div class="content-area">
-                        <p>Это информационное окно можно перемещать по экрану.</p>
-                        <p>Просто зажмите заголовок (☰) и перетащите окно в нужное место.</p>
-                        <p>Окно не выйдет за границы экрана.</p>
+                        <form>
+                            <input class= "input_wrapper" type="text" placeholder="Название поставщика">
+                            <button class="button button--green button_supplier ">Отправить</button>
+                        </form>
                     </div>
                 </div>
             </div>
             
-            <!-- Окно 3: пустое для вашего контента -->
+            <!-- Окно 3: Форма с заявкой -->
             <div id="popup3" class="my-popup">
                 <div class="popup-content">
                     <div class="popup-header">
@@ -129,16 +125,16 @@
                         <h2>Ваше окно</h2>
                         <span class="close-btn">&times;</span>
                     </div>
-                    <div class="content-area" id="custom-content">
-                        <!-- Сюда вы добавите свой контент -->
-                        <p style="text-align: center; color: #666; padding: 40px;">
-                            Это пустая область.<br>
-                            Добавьте сюда свою форму или любой другой контент.
-                        </p>
+                    <div class="content-area">
+                        <form  id="inputDataForm" method="post" >
+                            {% csrf_token %}
+                            {{ input_data_form.as_div }}
+                            <button type="submit">Сохранить</button>
+                        </form>
                     </div>
                 </div>
             </div>
-
+            <!-- Окно 3: Меню с отчетом -->
             <div id="popup4" class="my-popup">
                 <div class="popup-content">
                     <div class="popup-header">
@@ -146,17 +142,18 @@
                         <h2>Ваше окно</h2>
                         <span class="close-btn">&times;</span>
                     </div>
-                    <div class="content-area" id="custom-content">
-                        <!-- Сюда вы добавите свой контент -->
-                        <p style="text-align: center; color: #666; padding: 40px;">
-                            Это пустая область.<br>
-                            Сам создал!!.
-                        </p>
+                    <div class="content-area">
+                        форма с джанго
+                        <form action="">
+                            {% csrf_token %}
+                            {{input_data_form}}
+                        </form>
+                        
                     </div>
                 </div>
             </div>
 
-        {% comment %} <table>
+    {% comment %} <table>
             <thead>
                 <tr>
                     <th>номер накладной</th>
@@ -178,77 +175,16 @@
             <tbody id="invoiceTableBody">
                 <!-- Data will be loaded here -->
             </tbody>
-        </table>
+        </table> {% endcomment %}
 
-    <!-- Add Supplier Modal -->
-    <div id="addSupplierModal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closePopup('addSupplierModal')">&times;</span>
-            <h2>Добавить поставщика</h2>
-            <form id="addSupplierForm" onsubmit="addSupplier(event)">
-                <label for="supplierName">Название поставщика:</label>
-                <input type="text" id="supplierName" name="supplierName" required>
-                <br>
-                <button type="submit">Добавить</button>
-            </form>
-        </div>
-    </div>
-
-    <!-- Add Data Modal -->
-    <div id="addDataModal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closePopup('addDataModal')">&times;</span>
-            <h2>Внести данные</h2>
-            <form id="addDataForm" onsubmit="addData(event)">
-                <label for="invoiceNumber">Номер накладной:</label>
-                <input type="text" id="invoiceNumber" name="invoiceNumber" required>
-                <br>
-                <label for="invoiceDate">Дата накладной:</label>
-                <input type="date" id="invoiceDate" name="invoiceDate" required>
-                <br>
-                <label for="supplier">Поставщик:</label>
-                <input type="text" id="supplier" name="supplier" required>
-                <br>
-                <label for="article">Артикул:</label>
-                <input type="text" id="article" name="article" required>
-                <br>
-                <label for="productName">Наименование:</label>
-                <input type="text" id="productName" name="productName" required>
-                <br>
-                <label for="unit">Единицы измерения:</label>
-                <input type="text" id="unit" name="unit" required>
-                <br>
-                <label for="quantity">Количество:</label>
-                <input type="number" id="quantity" name="quantity" required>
-                <br>
-                <label for="comment">Комментарий:</label>
-                <input type="text" id="comment" name="comment">
-                <br>
-                <label for="description">Описание:</label>
-                <input type="text" id="description" name="description">
-                <br>
-                <label for="specialist">Специалист:</label>
-                <input type="text" id="specialist" name="specialist" required>
-                <br>
-                <label for="leader">Ведущий:</label>
-                <input type="text" id="leader" name="leader" required>
-                <br>
-                <label for="status">Статус:</label>
-                <select id="status" name="status" required>
-                    <option value="delivered">депестовка</option>
-                    <option value="processed">обработка</option>
-                    <option value="waiting">ждём ответ</option>
-                    <option value="not-listed">на списании</option>
-                </select>
-                <br>
-                <button type="submit">Сохранить</button>
-            </form>
-        </div>
-    </div>
-
-    <div id="overlay" class="overlay" onclick="closePopup()"></div> {% endcomment %}
+ 
 
     
     <script src='{% static 'shared\js\components\popup_manager.js' %}'></script>
+    <script src='{% static 'comers\js\auto_fields.js' %}'></script>
+    <script src='{% static 'comers\js\filters.js' %}'></script>
+    <script src='{% static 'comers\js\get_all_data_load_page.js' %}'></script>
+    <script src='{% static 'comers\js\query.js' %}'></script>
+    <script src='{% static 'comers\js\validate_form.js' %}'></script>
 </body>
 </html>
