--- a/static/comers/css/comers.css
+++ b/static/comers/css/comers.css
@@ -13,4 +13,6 @@
 @import url('components/style.css');
 @import url('components/supplier-cards.css');
 @import url('components/comers-table.css');
+@import url('components/comers-table.css');
+@import url('components/data_form.css');
 
