--- a/finder/templates/finder/index2.html
+++ b/finder/templates/finder/index2.html
@@ -59,7 +59,7 @@
             <div class="selected-projects-container">
                 <!-- Сюда будем добавлять выбранные проекты через JS -->
             </div>
-            <div class="button button--red">
+            <div class="button_wrapper_clear button button--red">
                 <div>Сбросить фильтр</div>
             </div>
         </div>
