--- a/static/finder/css/components/popups.css
+++ b/static/finder/css/components/popups.css
@@ -209,7 +209,6 @@ transition: transform 0.3s ease, opacity 0.3s ease;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 24px;
 }
 
 
@@ -368,9 +367,11 @@ transition: transform 0.3s ease, opacity 0.3s ease;
 /* Анимация шестереренок */
 
 .gears-container {
-width: 134px;
-height: 106px;
-margin: 20px;
+    width: fit-content;
+    height: fit-content;
+    padding-left: 111px;
+    padding-right: 109px;
+
 }
 
 /* Анимация большой синей шестерни */
