Сотировка проектов (группировка). Кверисет 500, подсветка строки ховером

--- a/finder/templates/finder/index2.html
+++ b/finder/templates/finder/index2.html
@@ -259,7 +259,7 @@
                 <div class="menu_row">
                     <img src="{% static 'finder/icon/notes.svg' %}" alt="Иконка заметок">
                     <div class="menu_link">
-                        <a href="{% url 'notes_home'%}">Заметки</a>
+                        <a href="#">Заметки</a>
                     </div>
                 </div>
                 <div class="menu_row">
