Поставщик добавляется. Логика в сериалайзере для уникального имя поставщика

--- a/static/comers/css/components/data_form.css
+++ b/static/comers/css/components/data_form.css
@@ -36,3 +36,14 @@
 .button_mod_width {
     width: 178px;
 }
+
+#add_suppler_form {
+    display: flex;
+    flex-direction: column; /* элементы располагаются в колонку */
+    align-items: center;     /* центрирование по вертикали */
+    gap: 10px;               /* отступ между элементами */
+    padding: 20px;           /* внутренние отступы */
+}
+.input_wrapper label {
+    margin-bottom: 10px;
+}
