--- a/comers/templates/comers/index.html
+++ b/comers/templates/comers/index.html
@@ -98,7 +98,7 @@
                         <form id="add_suppler_form" method="post">
                             {% csrf_token %}
                             {{add_suppler_form}}
-                            <button type="button" class="button button--green button_supplier ">Отправить</button>
+                            <button type="submit" class="button button--green button_supplier ">Отправить</button>
                         </form>
                     </div>
                 </div>
